log
Thu 09 Mar 2023 03:54:31 PM UTC: 
 tests:  0|7
total_score: 0/70
fb89188
Sat 18 Mar 2023 08:53:26 PM UTC: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:33:15: error: statement with no effect [-Werror=unused-value]
   33 |     else(a[i] < *min){
      |         ~~~~~~^~~~~~~
exercises.c:33:22: error: expected ‘;’ before ‘{’ token
   33 |     else(a[i] < *min){
      |                      ^
      |                      ;
cc1: all warnings being treated as errors
Compilation failed
6128f08
